# cccocw

./: .gitignore  LICENSE  README.md  clean_garbage.sh
_code/_bak/aclcoder/: aclcoder.sh  pyproject.toml  test.py  test_simple.py
_code/_bak/aclcoder/_doc/: SPEC.md
_code/_bak/aclcoder/output/blog/: main.py
_code/_bak/aclcoder/output/blog/templates/: index.html  post.html
_code/_bak/aclcoder/src/aclcoder/: __init__.py  acl_handler.py  cli.py  commander.py  executor.py
_code/_bak/aclcoder/test_output/: main.py
_code/_bak/ailcoder/: pyproject.toml  test_ail.py  test_integration.py  test_todo.sh
_code/_bak/ailcoder/_bak/: minicode_noail.py
_code/_bak/ailcoder/ail/: todo.ail
_code/_bak/ailcoder/examples/: ai_features.py  coding_assistant.py
_code/_bak/ailcoder/src/ailang/: parser.py
_code/_bak/ailcoder/src/ailcoder/: acl_socket.py  executor.py
_code/aclcoder/: test.sh  test_blog.py
_code/aclcoder拷貝/: test_direct.py
_code/ailang/: .gitignore  README.md  SPEC.md  minicode_ail.py  test.sh  test_ail.sh
_code/ailang拷貝/: .env.example
_code/ailcoder/: .gitignore  README.md  test_api.py  test_blog.py  test_commander.py  test_quick.py  test_simple.py  test_v06.py
_code/computer0/: README.md
_code/sp0/: _ai.md
_doc/skill/: github_markdown_skill.md
_wiki/: AGENTS.md  README.md  ccc.md  index.md  log.md  reference.md
_wiki/01-計算機結構/: index.md  log.md
_wiki/03-演算法/: log.md
_wiki/04-機器學習/: log.md
_wiki/05-網頁設計/: index.md
_wiki/06-軟體工程/: index.md  log.md
_wiki/機器學習/: Andrej_Karpathy.md  GPT.md  Geoffrey_Hinton.md  Gym.md  PyTorch.md  TensorFlow.md  Transformer.md  Yann_LeCun.md  Yoshua_Bengio.md  index.md  log.md  mini-openclaw.md  scikit-learn.md  世界模型.md  分類演算法.md  卷積神經網路.md  大型語言模型.md  強化學習.md  循環神經網路.md  決策樹.md  深度學習.md  監督式學習.md  神經網路.md  線性回歸.md  隨機森林.md  非監督式學習.md
_wiki/演算法/: Python.md  index.md  log.md  圖形演算法.md  排序演算法.md  時間複雜度.md  空間複雜度.md  資料結構.md
_wiki/程式與數學/: index.md  log.md
_wiki/系統程式/: C語言.md  Dennis_Ritchie.md  Docker.md  Git.md  HTTP.md  Ken_Thompson.md  Kubernetes.md  LLVM.md  Linus_Torvalds.md  Linux系統呼叫.md  QEMU.md  RISC-V.md  TCP-IP协定.md  c4.md  index.md  log.md  作業系統.md  同步與通訊.md  形式文法.md  排程.md  有限狀態機.md  檔案系統.md  (+10 more)
(+990 files in other folders)
